# ai-sales-agent

./: README.md  agents_factory.py  app.py  config.py  email_service.py  flows.py  messages.py  prompts.py  pyproject.toml  requirements.txt  schemas.py  ui.py
sales_agent/: agents_factory.py  compliance_logging.py  config.py  email_service.py  errors.py  flows.py  messages.py  output_validation.py  product_context_validation.py  prompts.py  runner.py  schemas.py  ui.py
tests/: conftest.py  test_agents_factory.py  test_compliance_review.py  test_email_service.py  test_errors.py  test_generation_flow.py  test_messages.py  test_output_validation.py  test_product_context_validation.py  test_runner.py  test_schemas.py  test_send_validation.py
