[project]
name = "ai-sales-agent"
version = "0.1.0"
description = "Multi-agent AI sales email generator using OpenAI Agents SDK and SendGrid"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "openai>=1.30.0",
    "openai-agents>=0.0.14",
    "sendgrid>=6.11.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = []