[project]
name = "ai-sales-agent"
version = "0.1.0"
description = "Multi-agent AI sales email generator using OpenAI Agents SDK and SendGrid"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "openai>=1.30.0",
    "openai-agents>=0.0.14",
    "sendgrid>=6.11.0",
    "python-dotenv>=1.0.1",
    "gradio>=6.14.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
